--- a/4.html
+++ b/4.html
@@ -35,11 +35,11 @@ border:1px solid;
 
     </tr>
 </table>
-<center><h1>Команда "" </h1></center>
+<center><h1>Команда Дебаширы </h1></center>
 <table bgcolor="#ffccbd" width="85%">
     <tr>
         <td>
-            В основно данная команда играет в классические матчи, на таких картах как: <a href="https://pubg.jonny.ru/erangel">Эрангель</a> и <a href="https://pubg-base.ru/igrovye-karty/livik/">Ливик</a>. Команда была основанна в 2021 году первые участники были ×Mr Shelby×, عقلمشرق и ميجانوس, в будуйщем в январе 2022 года присоеденяется exel343
+            В основном данная команда играет в классические матчи, на таких картах как: <a href="https://pubg.jonny.ru/erangel">Эрангель</a> и <a href="https://pubg-base.ru/igrovye-karty/livik/">Ливик</a>. Команда была основанна в 2021 году первые участники были ×Mr Shelby×, عقلمشرق и ميجانوس, в будущем в январе 2022 года присоеденяется exel343
             <table width="85%" border="1" bgcolor="#e0ffff" class="example">
                 <tr>
                     <td>Ник</td>
@@ -56,18 +56,18 @@ border:1px solid;
                 <tr>
                     <td><a href="file:///I:/лалал/лев.html">عقلمشرق</a></td>
                     <td> <center> <a href=""> <img height="150" width="150" src="https://i.imgur.com/YMRphNa.png"> </a> </center> </td>
-                    <td>Снайпер(потом исправть если не так)</td>
+                    <td>Снайпер</td>
                     <td> <center> Араб </center> </td>
                 </tr>
                 <tr>
-                    <td>ميجانوس</td>
+                    <td><a href="file:///I:/лалал/Настя.html">ميجانوس</a></td>
                     <td> <center> <a href=""> <img height="150" width="150" src="https://i.imgur.com/Z8OHDLt.png"> </a> </center> </td>
                     <td>Хиллер</td>
-                    <td> <center> Отсутствует </center> </td>
+                    <td> <center> Снайперский талисман </center> </td>
                 </tr>
                 <tr><td>exel343</td>
                     <td> <center> <a href=""> <img height="150" width="150" src="https://i.imgur.com/ElmfGPo.png"> </a> </center> </td>
-                    <td>ХЗ(потом исправть если не так)</td>
+                    <td>Разведчик</td>
                     <td> <center> Отсутствует </center> </td></tr>
             </table>
          <h2>Связки игроков</h2>
