--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ border:1px solid;
                     <td> <center> Главный араб удмуртии </center> </td>
                 </tr>
                 <tr>
-                    <td><a href="file:///I:/лалал/лев.html">عقلمشرق</a></td>
+                    <td><a href="https://locesfo.github.io/lev/">عقلمشرق</a></td>
                     <td> <center> <a href=""> <img height="150" width="150" src="https://i.imgur.com/YMRphNa.png"> </a> </center> </td>
                     <td>Снайпер</td>
                     <td> <center> Араб </center> </td>
