--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ border:1px solid;
                     <td>Прозвище</td>
                 </tr>
                 <tr>
-                    <td> <a href="file:///I:/лалал/Артем.html">×Mr Shelby×</a></td>
+                    <td> <a href="https://locesfo.github.io/art/">×Mr Shelby×</a></td>
                     <td> <center> <a href=""> <img height="150" width="150" src="https://i.imgur.com/028bxVb.png"> </a> </center> </td>
                     <td>Пушер</td>
                     <td> <center> Главный араб удмуртии </center> </td>
@@ -60,7 +60,7 @@ border:1px solid;
                     <td> <center> Араб </center> </td>
                 </tr>
                 <tr>
-                    <td><a href="file:///I:/лалал/Настя.html">ميجانوس</a></td>
+                    <td><a href="https://locesfo.github.io/nast/">ميجانوس</a></td>
                     <td> <center> <a href=""> <img height="150" width="150" src="https://i.imgur.com/Z8OHDLt.png"> </a> </center> </td>
                     <td>Хиллер</td>
                     <td> <center> Снайперский талисман </center> </td>
